Fixed scrollbar issue

--- a/src/themes/standard/less/footer.less
+++ b/src/themes/standard/less/footer.less
@@ -10,7 +10,7 @@
 
 footer {
     background: @footer-background-color;
-    margin: -@footer-height 0 0 0;
+    margin: -(@footer-height + 1) 0 0 0;
     font-size: 90%;
     color: @footer-color;
     line-height: @footer-height;
