--- a/src/themes/standard/less/variables.less
+++ b/src/themes/standard/less/variables.less
@@ -7,7 +7,7 @@
 @header-background-color: #68217a;
 @header-height: 60px;
 
-@container-padding: 20px;
+@container-padding: 19px;
 
 @menu-background-color: #f2eee6;
 @menu-background-open-color: #e0e7e3;
